Wrap fix in brokerage dasboard

--- a/src/app/components/main/dashboard/dashboard.scss
+++ b/src/app/components/main/dashboard/dashboard.scss
@@ -245,7 +245,7 @@
                     margin-left: 10px
                 }
                 .conference-btn {
-                    font-size: 12px;
+                    font-size: 10px;
                     padding: 6px 18px;
                     text-transform: uppercase;
                     border-radius: 3px;
